# group-3-project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  jekyll-gh-pages.yml
Assets/Tileset/: Clay + Grass-20260421-215141.piskel  tiles.txt
Websites for Our Game Design Result/: package-lock.json
Websites for Our Game Design Result/Webpage/: README.txt  index.html
data/: synth.json  temp.json
data/animations/player/: dust.json  fall.json  fall_headless.json  head_explosion.json  idle.json  idle_headless.json  jump.json  jump_headless.json  land.json  land_headless.json  respawn.json  resurrect.json  run.json  run_headless.json  throw_head.json
data/levels/: tiles.csv
data/levels/Level_0/: IntGrid.csv  data.json
data/levels/Level_1/: IntGrid.csv  data.json
data/levels/Level_10/: IntGrid.csv  data.json
data/levels/Level_11/: IntGrid.csv  data.json
data/levels/Level_12/: IntGrid.csv  data.json
data/levels/Level_13/: IntGrid.csv  data.json
data/levels/Level_14/: IntGrid.csv  data.json
data/levels/Level_15/: IntGrid.csv  data.json
data/levels/Level_16/: IntGrid.csv  data.json
data/levels/Level_17/: IntGrid.csv  data.json
data/levels/Level_18/: IntGrid.csv  data.json
data/levels/Level_19/: IntGrid.csv  data.json
data/levels/Level_2/: IntGrid.csv  data.json
data/levels/Level_20/: IntGrid.csv  data.json
data/levels/Level_21/: IntGrid.csv  data.json
data/levels/Level_3/: IntGrid.csv  data.json
data/levels/Level_4/: IntGrid.csv  data.json
data/levels/Level_5/: IntGrid.csv  data.json
data/levels/Level_6/: IntGrid.csv  data.json
data/levels/Level_7/: IntGrid.csv  data.json
data/levels/Level_8/: IntGrid.csv  data.json
data/levels/Level_9/: IntGrid.csv  data.json
docs/: 02_GameplayMechanics.md  Appendices.md  SectionVIII_GameArt.md  TableOfContents.md  _config.yml  index.md  team.md
docs/_data/: _team.yml  menus.yml
docs/_sass/custom/: setup.scss
docs/gdd/: 01-game-overview.md  01_GameOverview.md  02-gameplay-mechanics.md  03-story-setting-characters.md  03_StorySettingCharacter.md  04-levels.md  04_Levels.md  05-interface.md  05_Interface.md  06-ai.md  06_AI.md  07-technical.md  07_Technical.md  08-game-art.md  09-secondary-software.md  09_SecondarySoftware.md  10-management.md  10_Management.md  DesignHistory.md  TableOfContents.md  _Sidebar.md  appendices.md  design-history.md  index.md  introduction.md  table-of-contents.md
src/: animation.cpp  animation.hpp  audio.cpp  audio.hpp  camera.cpp  camera.hpp  clay.hpp  death.hpp  head.cpp  head.hpp  interactables.cpp  interactables.hpp  level_loader.cpp  level_loader.hpp  lighting.hpp  main.cpp  physics.cpp  physics.hpp  player.cpp  player.hpp  rendering.cpp  rendering.hpp  resources.cpp  resources.hpp  sdl.hpp  sprite.cpp  sprite.hpp  utils.hpp  vfx.cpp  vfx.hpp
src/engine/: input.cpp  input.hpp  inputmap.json  time.hpp
src/engine/input/: action.hpp  binding.hpp  manager.cpp  manager.hpp  map.cpp  map.hpp  transform.hpp  trigger.hpp
website/_sass/custom/: custom.scss
website/game-design-document/: 01-game-overview.md  02-gameplay-mechanics.md  03-story-setting-characters.md  04-levels.md  05-interface.md  06-artificial-intelligence.md  07-technical.md  08-game-art.md  09-secondary-software.md  10-management.md  appendices.md  design-history.md  index.md
